sophons/apps/garage/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: cache
  namespace: garage
spec:
  chain:
    middlewares:
      - name: default-cache
        namespace: traefik
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: forwardauth-authelia
  namespace: garage
spec:
  chain:
    middlewares:
      - name: forwardauth-authelia
        namespace: authelia
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: enable-caching
  namespace: garage
spec:
  headers:
    customResponseHeaders:
      cache-control: "public, max-age=3600, stale-while-revalidate=300"
