sophons/apps/garage/referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: ReferenceGrant
metadata:
  name: kaos-system-routes
  namespace: garage
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: kaos-system
  to:
    - group: ""
      kind: Service
      name: s3-global
