sophons/apps/garage/deployment.yaml
# yaml-language-server: $schema=https://github.com/yannh/kubernetes-json-schema/raw/refs/heads/master/v1.34.1/deployment-apps-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: global-garage-webui
  namespace: garage
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: garage-webui
      app.kubernetes.io/instance: global
  template:
    metadata:
      labels:
        app.kubernetes.io/name: garage-webui
        app.kubernetes.io/instance: global
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      tolerations:
        - key: caeneus.sophons.cloud
          operator: Exists

      containers:
        - name: webui
          image: docker.io/khairul169/garage-webui:1.1.0
          ports:
            - name: http
              containerPort: 3909
              protocol: TCP

          livenessProbe:
            httpGet:
              path: /
              port: http

          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault

          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              memory: 64Mi
