sophons/apps/garage/httproute.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/nlamirault/schema-hub/main/schemas/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: s3-global
  namespace: garage
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure

  hostnames:
    - s3-global.sophons.cloud
    - s3-global.sphns.run
    - ps3-global.sphns.run

  rules:
    - matches:
        - path:
            type: Exact
            value: /admin/health
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /health
      backendRefs:
        - name: s3-global
          port: 3903
    - backendRefs:
        - name: s3-global
          port: 3900
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/nlamirault/schema-hub/main/schemas/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: s3ui-global
  namespace: garage
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: "Garage S3-compatible storage admin"
    gethomepage.dev/icon: garage.svg
    gethomepage.dev/name: Garage
    gethomepage.dev/app: garage
    gethomepage.dev/group: Storage
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure

  hostnames:
    - s3ui-global.sophons.cloud
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /assets
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: cache
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: cache-control
                value: max-age=3600, stale-while-revalidate=300
      backendRefs:
        - name: global-webui
          port: 3909
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: forwardauth-authelia
      backendRefs:
        - name: global-webui
          port: 3909
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/nlamirault/schema-hub/main/schemas/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mirrors-global
  namespace: garage
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure

  hostnames:
    - mirrors.sphns.run

  rules:
    - filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Cache-Control
                value: max-age=3600, stale-while-revalidate=900
      backendRefs:
        - name: s3-global
          port: 3902
